fix: authentication with a sample
